--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 buildscript {
     repositories {
-        jcenter()
+        mavenCentral()
         maven {
             name = "forge"
-            url = "https://files.minecraftforge.net/maven"
+            url = "http://files.minecraftforge.net/maven"
         }
         maven {
             name = "sonatype"
@@ -11,32 +11,22 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
     }
 }
-
-apply plugin: 'net.minecraftforge.gradle.forge'
-
-repositories {
-    maven {
-        name 'ForgeFS'
-        url 'https://files.minecraftforge.net/maven'
-    }
-}
+apply plugin: 'forge'
 
 group = "com.kmecpp"
 version = project_version
 archivesBaseName = "BetterInvalidSession"
-sourceCompatibility = '1.7'
-targetCompatibility = '1.7'
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 libsDirName = "../output"
 distsDirName = "../output"
 
 minecraft {
     version = "${minecraft_version}-${forge_version}"
-    mappings = "${mappings_version}"
     runDir = "run"
-    useDepAts = true
 
     replace '${name}', project.name
     replace '${version}', project.version
