--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-project_version=1.0.0
-minecraft_version=1.12.2
+project_version=1.0.1
+minecraft_version=1.7.10
 mappings_version=stable_39
-forge_version=14.23.5.2825
+forge_version=10.13.4.1614-1.7.10
