--- a/build.gradle
+++ b/build.gradle
@@ -1,35 +1,46 @@
 buildscript {
     repositories {
+        maven { url = 'https://files.minecraftforge.net/maven' }
         mavenCentral()
-        maven {
-            name = "forge"
-            url = "http://files.minecraftforge.net/maven"
-        }
-        maven {
-            name = "sonatype"
-            url = "https://oss.sonatype.org/content/repositories/snapshots/"
-        }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.1.+', changing: true
     }
 }
-apply plugin: 'forge'
+apply plugin: 'net.minecraftforge.gradle'
 
 group = "com.kmecpp"
 version = project_version
 archivesBaseName = "BetterInvalidSession"
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+java.toolchain.languageVersion = JavaLanguageVersion.of(8)
+println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
+
 libsDirName = "../output"
 distsDirName = "../output"
 
-minecraft {
-    version = "${minecraft_version}-${forge_version}"
+sourceSets.main.resources { srcDir 'src/generated/resources' }
 
-    replace '${name}', project.name
-    replace '${version}', project.version
-    replaceIn "BetterInvalidSession.java"
+repositories {
+    mavenCentral()
+
+    maven {
+        name 'CurseMaven'
+        url 'https://www.cursemaven.com'
+        content {
+            includeGroup 'curse.maven'
+        }
+    }
+    flatDir {
+        dirs 'libs'
+    }
+}
+
+dependencies {
+    minecraft 'net.minecraftforge:forge:1.16.5-36.1.0'
+
+    //Uncomment this to test with ReAuth
+//    runtimeOnly fg.deobf(":ReAuth:1.16-Forge-3.9.3")
+    runtimeOnly fg.deobf("curse.maven:reauth-237701:3105779")
 }
 
 configurations {
@@ -37,20 +48,76 @@ configurations {
 }
 
 processResources {
-    inputs.property "name", project.name
-    inputs.property "version", project.version
-    inputs.property "mc_version", minecraft_version
-
+    // Replace stuff in mods.toml, nothing else
     from(sourceSets.main.resources.srcDirs) {
-        include "mcmod.info"
-
-        // replace version and mcversion
-        expand "name": project.name, "version": project.version, "mc_version": minecraft_version
+        include 'META-INF/mods.toml'
+        expand 'loader_version': "[36,)",
+                'name': project.name,
+                'version': project.version,
+                'mc_version': minecraft_version,
+                'forge_version': forge_version
     }
 
-    // copy everything else, thats not the mcmod.info
     from(sourceSets.main.resources.srcDirs) {
-        exclude 'mcmod.info'
+        exclude 'META-INF/mods.toml'
     }
-    rename '(.+_at.cfg)', 'META-INF/$1'
 }
+
+
+jar {
+    manifest {
+        attributes([
+                "Implementation-Title"    : project.name,
+                "Implementation-Version"  : "${version}",
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+        ])
+    }
+}
+
+
+minecraft {
+    mappings channel: "snapshot", version: "${mappings_version}"
+
+    runs {
+        client {
+            workingDirectory project.file('run')
+            property 'forge.logging.markers', 'REGISTRIES'
+            property 'forge.logging.console.level', 'info'
+
+            mods {
+                betterinvalidsession {
+                    source sourceSets.main
+                }
+            }
+        }
+
+        server {
+            workingDirectory project.file('run')
+            property 'forge.logging.markers', 'REGISTRIES'
+            property 'forge.logging.console.level', 'info'
+
+            mods {
+                betterinvalidsession {
+                    source sourceSets.main
+                }
+            }
+        }
+
+        data {
+            workingDirectory project.file('run')
+            property 'forge.logging.markers', 'REGISTRIES'
+            property 'forge.logging.console.level', 'info'
+
+            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
+            args '--mod', 'examplemod', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
+
+            mods {
+                betterinvalidsession {
+                    source sourceSets.main
+                }
+            }
+        }
+    }
+}
+
+jar.finalizedBy('reobfJar')
