--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
 project_version=1.0.3
-minecraft_version=1.7.10
-mappings_version=stable_39
+minecraft_version=1.16.5
+mappings_version=20201028-1.16.3
 forge_version=10.13.4.1614-1.7.10
